foo/generated/gateway_treactor.yaml
# Generate by gcr.io/treactor/kpt-fn/gateway-api
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: treactor
  namespace: foo
  annotations:
    config.kubernetes.io/managed-by: fn:gen:gcr.io/treactor/kpt-fn/gateway-api
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
